# Audio-Emotion-Recognition

./: .activ_venv  .gitattributes  .gitignore  .lfsconfig  CNN.ipynb  CNN_ed.ipynb  README.md  ResNET.ipynb  ResNET_atak_adwersalny.ipynb  ResNET_grad_cam.ipynb  ResNet_porownanie_enhanced.ipynb  VGG16.ipynb  audio_visualizations.ipynb  classification_report_harmonic_percussive_20250520_131433.csv  config.py  create_data.py  pyproject.toml  requirements.txt  results_harmonic_percussive_20250520_131433.txt
CNN_ed/model_outputs/: emotion_labels.json
CONV1D_RNN/: Conv 1D_i_RNN_dla ZeroCrossingRate+RMS Energy.ipynb
Resnet_and_ensemble/src/: ResNET.ipynb  ResNet_ensemble.ipynb  audio_visualizations.ipynb
Resnet_and_ensemble/src/export_scripts/: feature_extractor.py  modern_onnx_exporter.py  test_onnx_inference.py
Resnet_and_ensemble/src/helpers/: augment_for_all_types.py  ensemble_dataset.py  ensemble_trainer.py  utils.py  vizualization.py
Simple_CNN/: SimpleCNN.ipynb  config.py
Simple_CNN/helpers/: audio_cnn.py  audio_trainer.py  result_visualizer.py
Simple_CNN/model_output/: sbest_audio_emotion_model.pth
Simple_CNN/model_outputs/: classification_report.json  training_history.json
VGG16/: config.py
VGG16/helpers/: VGG16_definition.py  data.py  utils.py
VGG16/model_outputs/: history.pkl  test_results.txt
XAI/: XAI_porownanie.ipynb
XAI/heplers/: early_stopping.py
XAI/xai_methods/: grad_cam_def.py  gradcam_explainer.py  lime_explainer.py  lrp_explainer.py  silence_maps_explainer.py  visualization_utils.py
helpers/: data_proccesing.py  early_stopping.py  ensemble_model.py  resnet_model_definition.py  utils.py
heplers/: audio_dataset.py  audio_trainer.py  augmentation.py  result_visualizer.py
model_outputs/: classification_report.json  confusion_matrix.json  emotion_labels.json  model_epoch_1.pth  model_epoch_16.pth  model_epoch_17.pth  model_epoch_19.pth  model_epoch_2.pth  model_epoch_23.pth  model_epoch_26.pth  model_epoch_27.pth  model_epoch_3.pth  model_epoch_30.pth  model_epoch_5.pth  model_epoch_6.pth  model_epoch_9.pth  model_summary.json  raport.txt  results_20250401_085456.txt  training_history.json
src/: Ensemble_isnpection.ipynb  Ensemble_model_export.ipynb  Modern_ONNX_Export.ipynb  ResNET.ipynb  ResNet_ensemble.ipynb  ResNet_porownanie.ipynb  audio_visualizations.ipynb  config.py  create_data.py  model_inspector.py  temp_notebook.py
src/Atak_adw/: ResNET_atak_adwersalny.ipynb
src/CNN_ed/: CNN_ed.ipynb
src/CONV1D_RNN/: Conv 1D_i_RNN_dla ZeroCrossingRate+RMS Energy.ipynb  Conv1D_i_RNN_Pytorch.ipynb
src/CONV1D_RNN/model_outputs/: best_conv1d_rnn_model.pt
src/Ensemble/: Ensemble_isnpection.ipynb  ONNX_Export.ipynb  ResNet_ensemble.ipynb
src/Ensemble/export_scripts/: feature_extractor.py  onnx_exporter.py  test_onnx_inference.py
src/ResNet_for_all_repr/: ResNet_porownanie.ipynb
src/ResNet_mel/: ResNET.ipynb
src/ResNet_mel/model_outputs/: results_20250515_090117.txt
src/Simple_CNN/: SimpleCNN.ipynb
src/Simple_CNN/model_outputs/: best_audio_emotion_model.pth  confusion_matrix.json  model_summary.json
src/VGG16/: VGG16.ipynb
src/VGG16/model_outputs/: training_metrics.txt
src/XAI/: XAI_porownanie.ipynb
src/XAI/xai_methods/: grad_cam_def.py  gradcam_explainer.py  lime_explainer.py  lrp_explainer.py  silence_maps_explainer.py  visualization_utils.py
src/ensemble_outputs/ensemble_run_20250519_150653/: evaluation_results.json  optimization_results.json  optimized_weights.yaml
src/export_scripts/: README.md  __init__.py  callibration_utils.py  ensemble_onnx_wrapper.py  export_onnx_notebook_helper.py  export_to_onnx.py  notebook.py  test_onnx_model.py  test_quantization.py  test_without_audio.py
src/exported_models/onnx_20250519_150033/: ensemble_model_optimized.onnx  metadata_export_20250519_150053.json
src/exported_models/onnx_20250519_165847/: metadata_export_20250519_165906.json
src/exported_models/onnx_20250520_174735/: ensemble_model.onnx  metadata_export_20250520_174754.json
src/exported_models/onnx_optimized/: ensemble_model.onnx
src/helpers/: audio_cnn.py  audio_dataset.py  audio_trainer.py  augment_for_all_types.py  augmentation.py  data_proccesing.py  early_stopping.py  ensemble_dataset.py  ensemble_model.py  ensemble_trainer.py  feature_extractor.py  resnet_model_definition.py  result_visualizer.py  utils.py  vgg16_data.py  vgg16_definition.py  vgg16_utils.py  vizualization.py
src/normalization_stats/: chroma_stats.json  mfcc_stats.json
src/notebooks/: model_inspection_cell.py  model_loader.py
xai_methods/: gradcam_explainer.py  lime_explainer.py  lrp_explainer.py  silence_maps_explainer.py
(+56 files in other folders)
